# yadro-telecom-assignment

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: ci.yaml
cmake/: CompileOptions.cmake
core/: CMakeLists.txt
core/include/: client_club.hpp  clock.hpp  computer_club.hpp  input.hpp  utility.hpp
core/src/: client_club.cpp  clock.cpp  computer_club.cpp  input.cpp  utility.cpp
test/: CMakeLists.txt  clock_test.cpp  computer_club_test.cpp  input_test.cpp  utility_test.cpp
